<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white_25"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        style="@style/CorotionText.Medium.Black"
        android:layout_margin="@dimen/dimen_24dp"
        android:text="@string/message_exit"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16sp" />

    <View
        android:id="@+id/dividerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@id/tvMessage"
        android:background="@color/colorWarmGrey" />

    <View
        android:id="@+id/dividerVertical"
        android:layout_width="@dimen/dimen_1dp"
        android:layout_height="match_parent"
        android:layout_below="@id/dividerHorizontal"
        android:layout_alignBottom="@id/btnNegative"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWarmGrey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNegative"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerHorizontal"
        android:layout_alignEnd="@id/dividerVertical"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/action_no"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPositive"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerHorizontal"
        android:layout_alignStart="@id/dividerVertical"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/action_yes"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_16sp" />
</RelativeLayout>