<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_background_blur" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearch"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:fitsSystemWindows="true"
        app:contentInsetStart="@dimen/dimen_16dp"
        app:contentInsetStartWithNavigation="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:background="@drawable/bg_rounded_white_30"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingEnd="@dimen/dimen_16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/btnSearch"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/label_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorWarmGrey"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY"
                android:src="@drawable/ic_search"
                android:tint="#C24E66" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_200dp"
        android:background="@drawable/bg_rounded_top_pink_40"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSearch">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CorotionText.Bold.White"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:drawableStart="@drawable/ic_reports"
            android:drawablePadding="@dimen/dimen_16dp"
            android:text="@string/label_country_reports"
            android:textSize="@dimen/text_size_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:background="@color/colorWhite50" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                style="@style/CorotionText.Bold.White"
                android:layout_centerInParent="true"
                android:paddingStart="@dimen/dimen_25dp"
                android:paddingEnd="@dimen/dimen_25dp"
                android:text="@string/message_error_data"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCountry"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <ProgressBar
                android:id="@+id/pbCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>