<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_background_blur" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnCovid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_30dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_111dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SelectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/dimen_25dp"
                        style="@style/CorotionText.Bold.RedLight"
                        android:text="What is Covid-19?"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_133dp"
                        android:layout_height="@dimen/dimen_111dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_corona_information"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnSymptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_30dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@id/btnCovid">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SelectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/dimen_25dp"
                        style="@style/CorotionText.Bold.RedLight"
                        android:text="@string/label_symptoms"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_133dp"
                        android:layout_height="@dimen/dimen_111dp"
                        android:scaleType="fitXY"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_island"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_46dp"
                        android:layout_height="@dimen/dimen_86dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/dimen_35dp"
                        app:srcCompat="@drawable/ic_symptoms"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnWashingHand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_30dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@id/btnSymptoms">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SelectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/dimen_25dp"
                        style="@style/CorotionText.Bold.RedLight"
                        android:text="@string/label_washing_hands"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_133dp"
                        android:layout_height="@dimen/dimen_111dp"
                        android:scaleType="fitXY"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_island"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_73dp"
                        android:layout_height="@dimen/dimen_68dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/dimen_25dp"
                        app:srcCompat="@drawable/ic_washing_hand"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnPreventions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_30dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@id/btnWashingHand">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SelectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/dimen_25dp"
                        style="@style/CorotionText.Bold.RedLight"
                        android:text="@string/label_preventions"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_133dp"
                        android:layout_height="@dimen/dimen_111dp"
                        android:scaleType="fitXY"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_island"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_73dp"
                        android:layout_height="@dimen/dimen_68dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/dimen_25dp"
                        app:srcCompat="@drawable/ic_preventions"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/layout_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>